# sentinal-ai

./: README.md
sentinal-ai/: app.py  pyproject.toml
sentinal-ai v3.1 Alpha/: .gitignore  ai_analyzers.py  kdp_data.py  pyproject.toml  requirements.txt  rule_based_validators.py  sentinel_ai_app.py  text_processing.py
